Added adv and ddv stats (#19)
* Added adv and ddv stats
