# static/swagger.json
@@ -185,13 +185,39 @@
         }
       }
     },
+    "/profiles/stats": {
+      "get": {
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "Profiles"
+        ],
+        "summary": "Returns decentr stats.",
+        "operationId": "GetDecentrStats",
+        "responses": {
+          "200": {
+            "description": "Stats",
+            "schema": {
+              "$ref": "#/definitions/DecentrStats"
+            }
+          },
+          "500": {
+            "description": "internal server error",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        }
+      }
+    },
     "/profiles/{address}/stats": {
       "get": {
         "produces": [
           "application/json"
         ],
         "tags": [
-          "Community"
+          "Profiles"
         ],
         "summary": "Get pdv stats by address.",
         "operationId": "GetProfileStats",
@@ -241,6 +267,23 @@
       "format": "uint8",
       "x-go-package": "github.com/Decentr-net/decentr/x/community/types"
     },
+    "DecentrStats": {
+      "type": "object",
+      "title": "DecentrStats ...",
+      "properties": {
+        "adv": {
+          "type": "number",
+          "format": "double",
+          "x-go-name": "ADV"
+        },
+        "ddv": {
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "DDV"
+        }
+      },
+      "x-go-package": "github.com/Decentr-net/theseus/internal/server"
+    },
     "Error": {
       "type": "object",
       "title": "Error ...",
@@ -248,6 +291,26 @@
         "error": {
           "type": "string",
           "x-go-name": "Error"
+        }
+      },
+      "x-go-package": "github.com/Decentr-net/go-api"
+    },
+    "GetPostResponse": {
+      "type": "object",
+      "title": "GetPostResponse ...",
+      "properties": {
+        "post": {
+          "$ref": "#/definitions/Post"
+        },
+        "profile": {
+          "$ref": "#/definitions/Profile"
+        },
+        "stats": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/StatsItem"
+          },
+          "x-go-name": "Stats"
         }
       },
       "x-go-package": "github.com/Decentr-net/theseus/internal/server"
